🐛 Fix workflow arg

--- a/action.yml
+++ b/action.yml
@@ -23,7 +23,7 @@ runs:
     - name: Download reference report
       if: github.event_name == 'pull_request'
       run: |
-        RUN_ID=`gh run list --repo ${{ github.repository }} --branch ${{ github.base_ref }} --workflow ${{ github.workflow }} --json 'conclusion,databaseId' --jq 'map(select(.conclusion=="success"))[0].databaseId'`
+        RUN_ID=`gh run list --repo ${{ github.repository }} --branch ${{ github.base_ref }} --workflow '${{ github.workflow }}' --json 'conclusion,databaseId' --jq 'map(select(.conclusion=="success"))[0].databaseId'`
         gh run download ${RUN_ID} --repo ${{ github.repository }} -n gasreport
       env:
         GITHUB_TOKEN: ${{ inputs.token }}
