--- a/action.yml
+++ b/action.yml
@@ -27,21 +27,22 @@ runs:
         gh run download ${RUN_ID} --repo ${{ github.repository }} -n gasreport
       env:
         GITHUB_TOKEN: ${{ inputs.token }}
-      shell: bash
       continue-on-error: true
       id: reference
 
     - name: Compare reports
       if: steps.reference.outcome == 'success' && github.event_name == 'pull_request'
       run: node scripts/index.js -o markdown ${{ inputs.refReport }} ${{ inputs.report }} >> $GITHUB_STEP_SUMMARY
-      shell: bash
+
+    - name: Format output filename
+      run: echo ::set-output name=out_report::"$(echo ${{ inputs.outReport }} | sed 's,/,-,g')"
+      id: format
 
     - name: Rename report for upload
-      run: OUT=${{ inputs.outReport }} && echo ${{ github.head_ref }} && echo ${{ github.ref_name }} && echo ${{ github.base_ref }} && mv ${{ inputs.report }} ${OUT//\//-}
-      shell: bash
+      run: mv ${{ inputs.report }} ${{ steps.format.outputs.out_report }}
 
     - name: Save report
       uses: actions/upload-artifact@v3
       with:
         name: gasreport
-        path: ${{ inputs.outReport }}
+        path: ${{ steps.format.outputs.out_report }}
