--- a/action.yml
+++ b/action.yml
@@ -27,19 +27,23 @@ runs:
         gh run download ${RUN_ID} --repo ${{ github.repository }} -n gasreport
       env:
         GITHUB_TOKEN: ${{ inputs.token }}
+      shell: bash
       continue-on-error: true
       id: reference
 
     - name: Compare reports
       if: steps.reference.outcome == 'success' && github.event_name == 'pull_request'
       run: node scripts/index.js -o markdown ${{ inputs.refReport }} ${{ inputs.report }} >> $GITHUB_STEP_SUMMARY
+      shell: bash
 
     - name: Format output filename
       run: echo ::set-output name=out_report::"$(echo ${{ inputs.outReport }} | sed 's,/,-,g')"
+      shell: bash
       id: format
 
     - name: Rename report for upload
       run: mv ${{ inputs.report }} ${{ steps.format.outputs.out_report }}
+      shell: bash
 
     - name: Save report
       uses: actions/upload-artifact@v3
