--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "hardhat"
   ],
   "devDependencies": {
+    "@types/command-line-args": "^5.2.0",
+    "@types/command-line-usage": "^5.0.2",
     "@types/node": "^18.0.3",
     "prettier": "^2.7.1",
     "typescript": "^4.7.4"
