--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "target": "es6",
-    // "noImplicitAny": true,
+    "strict": true,
     "moduleResolution": "node",
     "sourceMap": true,
     "outDir": "scripts",
