--- a/package.json
+++ b/package.json
@@ -4,21 +4,25 @@
   "description": "Github Action reporting gas diff from Foundry reports",
   "author": "Romain Milon (Rubilmax) <rmilon@gmail.com>",
   "license": "UNLICENSED",
-  "main": "scripts/index.js",
+  "main": "dist/cli.js",
   "directories": {
-    "lib": "scripts",
+    "lib": "dist",
     "test": "tests"
   },
   "type": "module",
   "scripts": {
-    "postinstall": "yarn build && chmod +x scripts/index.js",
-    "test": "yarn build && node scripts/index.js tests/gas_report.ansi tests/gas_report2.ansi",
+    "postinstall": "yarn build && chmod +x dist/index.js",
+    "test": "yarn build && node dist/index.js tests/gas_report.ansi tests/gas_report2.ansi",
     "build": "tsc"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Rubilmax/foundry-gas-report.git"
   },
+  "bugs": {
+    "url": "https://github.com/Rubilmax/foundry-gas-report/issues"
+  },
+  "homepage": "https://github.com/Rubilmax/foundry-gas-report#readme",
   "keywords": [
     "foundry",
     "forge",
@@ -27,6 +31,7 @@
     "hardhat"
   ],
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/command-line-args": "^5.2.0",
     "@types/command-line-usage": "^5.0.2",
     "@types/node": "^18.0.3",
@@ -34,6 +39,11 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@actions/artifact": "^1.1.0",
+    "@actions/core": "^1.9.0",
+    "@actions/exec": "^1.1.1",
+    "@actions/github": "^5.0.3",
+    "axios": "^0.27.2",
     "chalk": "^5.0.1",
     "command-line-args": "^5.2.1",
     "command-line-usage": "^6.1.3",
