--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
   "description": "Github Action reporting gas diff from Foundry reports",
   "author": "Romain Milon (Rubilmax) <rmilon@gmail.com>",
   "license": "UNLICENSED",
-  "main": "dist/cli.js",
+  "main": "lib/index.js",
   "directories": {
     "lib": "dist",
     "test": "tests"
   },
   "type": "module",
   "scripts": {
-    "postinstall": "yarn build && chmod +x dist/index.js",
-    "test": "yarn build && node dist/index.js tests/gas_report.ansi tests/gas_report2.ansi",
-    "build": "tsc"
+    "build": "tsc",
+    "package": "ncc build --license licenses.txt"
   },
   "repository": {
     "type": "git",
@@ -32,9 +31,9 @@
   ],
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
-    "@types/command-line-args": "^5.2.0",
-    "@types/command-line-usage": "^5.0.2",
     "@types/node": "^18.0.3",
+    "@vercel/ncc": "^0.34.0",
+    "microbundle": "^0.15.0",
     "prettier": "^2.7.1",
     "typescript": "^4.7.4"
   },
@@ -45,8 +44,6 @@
     "@actions/github": "^5.0.3",
     "axios": "^0.27.2",
     "chalk": "^5.0.1",
-    "command-line-args": "^5.2.1",
-    "command-line-usage": "^6.1.3",
     "yargs": "^17.5.1"
   }
 }
