--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@actions/core": "^1.9.0",
     "@actions/exec": "^1.1.1",
     "@actions/github": "^5.0.3",
+    "@types/adm-zip": "^0.5.0",
+    "adm-zip": "^0.5.9",
     "axios": "^0.27.2",
     "chalk": "^5.0.1",
     "yargs": "^17.5.1"
