🐛 Fix loading of src content

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,6 @@
 {
   "tabWidth": 2,
-  "printWidth": 100
+  "printWidth": 100,
+  "importOrder": ["^(?![@\\.]).*", "^@", "^\\.\\.", "^\\."],
+  "importOrderSeparation": true
 }
