--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "author": "Romain Milon (Rubilmax) <rmilon@gmail.com>",
   "license": "UNLICENSED",
   "main": "lib/index.js",
-  "directories": {
-    "lib": "dist",
-    "test": "tests"
-  },
   "scripts": {
     "build": "tsc",
-    "package": "ncc build --license licenses.txt",
-    "release": "yarn build && yarn package"
+    "format": "prettier --write '**/*.ts'",
+    "format:check": "prettier --check '**/*.ts'",
+    "lint": "eslint src/**/*.ts",
+    "package": "ncc build --source-map --license licenses.txt",
+    "release": "yarn build && yarn package",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -29,23 +29,43 @@
     "report",
     "hardhat"
   ],
-  "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
-    "@types/node": "^18.0.3",
-    "@vercel/ncc": "^0.34.0",
-    "microbundle": "^0.15.0",
-    "prettier": "^2.7.1",
-    "typescript": "^4.7.4"
-  },
   "dependencies": {
-    "@actions/artifact": "^1.1.0",
     "@actions/core": "^1.9.0",
+    "@jest/types": "^28.1.3",
+    "@octokit/core": "^4.0.4",
+    "@types/jest": "^28.1.6"
+  },
+  "devDependencies": {
+    "@actions/artifact": "^1.1.0",
     "@actions/exec": "^1.1.1",
     "@actions/github": "^5.0.3",
+    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/adm-zip": "^0.5.0",
+    "@types/node": "^18.0.3",
+    "@typescript-eslint/parser": "^5.30.6",
+    "@vercel/ncc": "^0.34.0",
     "adm-zip": "^0.5.9",
-    "axios": "^0.27.2",
-    "chalk": "^5.0.1",
-    "yargs": "^17.5.1"
+    "colors": "^1.4.0",
+    "eslint": "^8.19.0",
+    "eslint-plugin-github": "^4.3.6",
+    "eslint-plugin-jest": "^26.6.0",
+    "jest": "^28.1.3",
+    "prettier": "^2.7.1",
+    "ts-jest": "^28.0.6",
+    "typescript": "^4.7.4"
+  },
+  "jest": {
+    "clearMocks": true,
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
+    "testMatch": [
+      "__tests__/*.test.ts"
+    ],
+    "transform": {
+      "^.+\\.ts$": "ts-jest"
+    },
+    "verbose": true
   }
 }
