--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,11 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
-    "lib": ["es6"],
     "outDir": "lib",
     "rootDir": "src",
     "strict": true,
     "noImplicitAny": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true
+    "esModuleInterop": true
   },
   "exclude": ["node_modules", "**/*.test.ts"]
 }
