--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "foundry-gas-report",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Github Action reporting gas diff from Foundry reports",
   "author": "Romain Milon (Rubilmax) <rmilon@gmail.com>",
   "license": "UNLICENSED",
@@ -41,6 +41,7 @@
     "@actions/github": "^5.0.3",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/adm-zip": "^0.5.0",
+    "@types/minimatch": "^3.0.5",
     "@types/node": "^18.0.3",
     "@typescript-eslint/parser": "^5.30.6",
     "@vercel/ncc": "^0.34.0",
@@ -50,6 +51,7 @@
     "eslint-plugin-github": "^4.3.6",
     "eslint-plugin-jest": "^26.6.0",
     "jest": "^28.1.3",
+    "minimatch": "^5.1.0",
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.6",
     "typescript": "^4.7.4"
@@ -61,7 +63,7 @@
       "js"
     ],
     "testMatch": [
-      "__tests__/*.test.ts"
+      "**/*.test.ts"
     ],
     "transform": {
       "^.+\\.ts$": "ts-jest"
