--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "foundry-gas-diff",
-  "version": "3.7.0",
+  "version": "3.8.0",
   "description": "Github Action reporting gas diff from Foundry gas reports",
   "author": "Romain Milon (Rubilmax) <rmilon@gmail.com>",
   "license": "UNLICENSED",
@@ -31,16 +31,18 @@
   ],
   "dependencies": {
     "@actions/core": "^1.9.0",
-    "@jest/types": "^28.1.3",
     "@octokit/core": "^4.0.4",
-    "@types/jest": "^28.1.6"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@actions/artifact": "^1.1.0",
     "@actions/exec": "^1.1.1",
     "@actions/github": "^5.0.3",
+    "@jest/types": "^28.1.3",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/adm-zip": "^0.5.0",
+    "@types/jest": "^28.1.6",
+    "@types/lodash": "^4.14.182",
     "@types/minimatch": "^3.0.5",
     "@types/node": "^18.0.3",
     "@typescript-eslint/parser": "^5.30.6",
