--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "UNLICENSED",
   "main": "lib/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --build tsconfig.build.json",
     "format": "prettier --write '**/*.ts'",
     "format:check": "prettier --check '**/*.ts'",
     "lint": "eslint src/**/*.ts",
