--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@octokit/core": "^4.1.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "minimatch": "5.1.4"
   },
   "devDependencies": {
     "@actions/artifact": "^1.1.1",
@@ -57,7 +58,6 @@
     "eslint-plugin-github": "^4.6.0",
     "eslint-plugin-jest": "^27.2.1",
     "jest": "^28.1.3",
-    "minimatch": "^5.1.2",
     "prettier": "^2.8.3",
     "ts-jest": "^28.0.8",
     "typescript": "^4.9.4"
