--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@actions/core": "^1.10.0",
     "@octokit/core": "^4.2.0",
     "lodash": "^4.17.21",
-    "minimatch": "7.0.0"
+    "minimatch": "^8.0.2"
   },
   "devDependencies": {
     "@actions/artifact": "^1.1.1",
@@ -47,20 +47,20 @@
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/adm-zip": "^0.5.0",
     "@types/jest": "^29.5.0",
-    "@types/lodash": "^4.14.191",
+    "@types/lodash": "^4.14.192",
     "@types/minimatch": "^5.1.2",
-    "@types/node": "^18.15.10",
-    "@typescript-eslint/parser": "^5.56.0",
+    "@types/node": "^18.15.11",
+    "@typescript-eslint/parser": "^5.57.0",
     "@vercel/ncc": "^0.36.1",
     "adm-zip": "^0.5.10",
     "colors": "^1.4.0",
-    "eslint": "^8.36.0",
+    "eslint": "^8.37.0",
     "eslint-plugin-github": "^4.7.0",
     "eslint-plugin-jest": "^27.2.1",
     "jest": "^29.5.0",
     "prettier": "^2.8.7",
-    "ts-jest": "^29.0.5",
-    "typescript": "^5.0.2"
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.3"
   },
   "jest": {
     "clearMocks": true,
