ci(node): use yarn cache

--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -21,12 +21,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-
-      - name: Node dependencies cache
-        uses: actions/cache@v3
-        with:
-          path: "**/node_modules"
-          key: yarn-${{ hashFiles('**/yarn.lock') }}
+          cache: yarn
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
