--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "tsc --build tsconfig.build.json",
     "format": "prettier --write '**/*.ts'",
     "format:check": "prettier --check '**/*.ts'",
-    "package": "ncc build --source-map --license licenses.txt --external encoding",
+    "package": "ncc build --source-map --license licenses.txt",
     "release": "yarn build && yarn package",
     "test": "jest"
   },
@@ -49,7 +49,7 @@
     "@types/lodash": "^4.14.195",
     "@types/minimatch": "^5.1.2",
     "@types/node": "^20.3.1",
-    "@vercel/ncc": "^0.36.1",
+    "@vercel/ncc": "0.34.0",
     "adm-zip": "^0.5.10",
     "colors": "^1.4.0",
     "jest": "^29.5.0",
