--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "foundry-gas-diff",
-  "version": "3.16.0",
+  "version": "3.17.0",
   "description": "Github Action reporting gas diff from Foundry gas reports",
   "author": {
     "name": "Romain (Rubilmax) Milon",
     "email": "rmilon@gmail.com",
     "url": "https://github.com/rubilmax"
   },
-  "license": "UNLICENSED",
-  "main": "lib/index.js",
+  "license": "MIT",
+  "main": "dist/index.js",
   "scripts": {
     "build": "rm -rf lib && tsc --build tsconfig.build.json",
     "format": "prettier --write '**/*.ts'",
@@ -33,29 +33,29 @@
     "hardhat"
   ],
   "dependencies": {
-    "@actions/core": "^1.10.0",
-    "@octokit/core": "^5.0.0",
-    "lodash": "^4.17.21",
-    "minimatch": "^9.0.3"
-  },
-  "devDependencies": {
-    "@actions/artifact": "^1.1.1",
+    "@actions/artifact": "^2.1.7",
+    "@actions/core": "^1.10.1",
+    "@octokit/core": "^6.1.2",
     "@actions/exec": "^1.1.1",
     "@actions/github": "^5.1.1",
-    "@jest/types": "^29.6.1",
-    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
-    "@types/adm-zip": "^0.5.0",
-    "@types/jest": "^29.5.3",
-    "@types/lodash": "^4.14.195",
+    "adm-zip": "^0.5.12",
+    "lodash": "^4.17.21",
+    "minimatch": "^9.0.4"
+  },
+  "devDependencies": {
+    "@jest/types": "^29.6.3",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/adm-zip": "^0.5.5",
+    "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.4",
     "@types/minimatch": "^5.1.2",
-    "@types/node": "^20.4.2",
+    "@types/node": "^20.12.12",
     "@vercel/ncc": "^0.36.1",
-    "adm-zip": "^0.5.10",
     "colors": "^1.4.0",
-    "jest": "^29.6.1",
+    "jest": "^29.7.0",
     "prettier": "^2.8.8",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.1.6"
+    "ts-jest": "^29.1.4",
+    "typescript": "^5.4.5"
   },
   "jest": {
     "clearMocks": true,
